fixed the settings currency and company name

--- a/app/templates/admin/edit_user.html
+++ b/app/templates/admin/edit_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit User - Electronics POS System{% endblock %}
+{% block title %}Edit User - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="container py-4">
