--- a/app/templates/admin/users.html
+++ b/app/templates/admin/users.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Users - Electronics POS System{% endblock %}
+{% block title %}Users - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
