--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% from 'components/card.html' import card %}
 
-{% block title %}My Profile - Electronics POS{% endblock %}
+{% block title %}My Profile - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
