--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Access Forbidden - Electronics POS{% endblock %}
+{% block title %}Access Forbidden - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
