--- a/app/templates/products/index.html
+++ b/app/templates/products/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Products - Electronics POS System{% endblock %}
+{% block title %}Products - {{ company_name }}{% endblock %}
 
 {% block head %}
 <style>
