--- a/app/templates/products/low_stock.html
+++ b/app/templates/products/low_stock.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Low Stock Products - Electronics POS System{% endblock %}
+{% block title %}Low Stock Products - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
