--- a/app/templates/sales/index.html
+++ b/app/templates/sales/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sales - Electronics POS System{% endblock %}
+{% block title %}Sales - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
