--- a/app/templates/admin/add_user.html
+++ b/app/templates/admin/add_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Add New User - Electronics POS System{% endblock %}
+{% block title %}Add New User - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="container py-4">
