--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Dashboard - Electronics POS System{% endblock %}
+{% block title %}Admin Dashboard - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
