--- a/app/templates/admin/settings.html
+++ b/app/templates/admin/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Settings - Electronics POS System{% endblock %}
+{% block title %}Settings - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="container-fluid py-4">
