--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Page Not Found - Electronics POS System{% endblock %}
+{% block title %}Page Not Found - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
