--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Internal Server Error - Electronics POS System{% endblock %}
+{% block title %}Internal Server Error - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
