--- a/app/templates/expenses/add.html
+++ b/app/templates/expenses/add.html
@@ -39,7 +39,7 @@
                         <div class="col-md-6">
                             <label class="form-label">Amount *</label>
                             <div class="input-group">
-                                <span class="input-group-text">$</span>
+                                <span class="input-group-text">{{ currency_symbol }}</span>
                                 <input type="number" name="amount" class="form-control" step="0.01" required
                                     value="{{ expense.amount if expense else '' }}">
                             </div>
