--- a/app/templates/sales/detail.html
+++ b/app/templates/sales/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sale #{{ sale.id }} - Electronics POS System{% endblock %}
+{% block title %}Sale #{{ sale.id }} - {{ company_name }}{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
