--- a/app/templates/sales/receipt_pdf.html
+++ b/app/templates/sales/receipt_pdf.html
@@ -19,6 +19,12 @@
             padding-bottom: 10px;
         }
 
+        .header img.logo {
+            max-height: 60px;
+            max-width: 180px;
+            margin-bottom: 10px;
+        }
+
         .store-info {
             font-weight: bold;
             font-size: 14px;
@@ -66,9 +72,11 @@
 
 <body>
     <div class="header">
-        <div class="store-info">Electronics Store POS</div>
-        <div>123 Tech Street, Silicon Valley, CA 94025</div>
-        <div>Phone: (555) 123-4567</div>
+        {% if company_logo %}
+        <img src="{{ url_for('static', filename=company_logo, _external=True) }}" alt="{{ company_name }}" class="logo">
+        {% endif %}
+        <div class="store-info">{{ company_name }}</div>
+        <div>{{ receipt_header }}</div>
     </div>
 
     <div class="receipt-info">
